[tool.poetry]
name = "ablaze"
version = "0.0.1"
description = "A Discord library to ease bot development and improve speed of development."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vcokltfre/ablaze"
keywords = ["discord", "bots", "bot", "discordbot"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
uvloop = "^0.16.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
sphinxcontrib-trio = "^1.1.2"
furo = "^2021.8.17-beta.43"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
